--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 </head>
 <body> 
 
-    <section id="menua9823ff3dfbdaa29" class="marshall menu menua9823ff3dfbdaa29" itemscope itemtype="http://schema.org/Organization" itemprop="text">
+<!-- marshall menu/navbar section main wrapper start from here -->   
+<section id="menua9823ff3dfbdaa29" class="marshall menu menua9823ff3dfbdaa29" itemscope itemtype="http://schema.org/Organization" itemprop="text">
         <!-- header starts here  -->
         <header class="header">
             <!-- navbar starts here -->
@@ -185,10 +186,35 @@
         </header>
         <!-- /header starts here -->
         
-        </section> 
-        <!-- /marshall menu/navbar section main wrapper ends here -->
+</section> 
+<!-- /marshall menu/navbar section main wrapper ends here -->
 
+<!-- andu about section main wrapper start from here -->
+<section id="abouta4c8deeb2f4571930" class="andu about abouta4c8deeb2f4571930" itemscope itemtype="http://schema.org/Organization" itemprop="text">
 
+    <!-- main content starts here -->
+    <div class="position-relative w-100 main">
+        <div class="position-absolute text-white d-flex flex-column align-items-start justify-content-center content">
+          <div class="container">
+            <div class="col-md-6">
+              <h2 class="mb-4 mt-2 font-weight-bold" itemprop="headline">
+                Enter Your Headline Here
+            </h2>
+              <p class="para-custom-class" itemprop="text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem eos ea, cum quae facilis optio impedit tempora aliquam at eveniet?
+            </p>
+              <div class="mt-5">
+                <a href="#" class="btn px-5 py-3 text-white mt-3 mt-sm-0 about" itemprop="url">
+                    About Us
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>    
+    <!-- main content starts here -->
+</section> 
+<!-- /andu about section main wrapper ends here -->
 
 
 
