--- a/index.html
+++ b/index.html
@@ -331,7 +331,6 @@
 <!-- /annu about section main wrapper ends here -->
 
 <!-- bartholomew blog section main wrapper start from here -->
-
 <section id="blogec6cc8e186617bf6" class="bartholomew blog blogec6cc8e186617bf6" itemscope itemtype="http://schema.org/Organization" itemprop="text">
     <!-- blog starts here -->
     <div class="blog-home3 py-5">
@@ -481,6 +480,33 @@
     <!-- /blog ends here -->
 </section> 
 <!-- /bartholomew blog section main wrapper ends here -->
+
+
+<!-- bannu banner section main wrapper start from here -->
+<section id="bannerb9aaf5d9db46220bf" class="bannu bannerb9aaf5d9db46220bf banner" itemscope itemtype="http://schema.org/Organization" itemprop="text">
+    <!-- banner content starts here -->
+   <div class="background">
+   
+       <div class="container text-white">
+           <h2 class="font-weight-bold" itemprop="headline">
+               High Quality video, audio &            
+               live class
+           </h2>
+           <p class="para-custom-class" itemprop="text">
+               EdTech or education technology is a power-packed advancement in the education and learning industry designed
+               to transform conventional learning systems into more convenient, engaging, and effective ones by leveraging
+               digital tools, software, applications, and other technological innovations.
+           </p>
+           <button class="btn button font-weight-bold" itemprop="action">
+               Visit Course
+           </button>
+       </div>
+       
+   </div>
+   <!-- /banner content ends here -->
+</section>
+<!-- /bannu banner section main wrapper ends here -->
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" itemprop="script"></script>
