--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet" media="all">
  
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- change url if its for download -->
 <link href="assets/vendor/themify-icons/themify-icons.min.css" rel="stylesheet" media="all" />
@@ -506,6 +507,68 @@
    <!-- /banner content ends here -->
 </section>
 <!-- /bannu banner section main wrapper ends here -->
+
+<!-- segal service section main wrapper start from here -->
+<!-- main content starts here -->
+<section id="serviced04850298895e70a" class="segal service serviced04850298895e70a" itemscope itemtype="http://schema.org/Organization" itemprop="text">
+
+    <div id="arrow-link" class="services-container">
+
+        <div class="h-p-group">
+            <h2 class="heading-custom-class" itemprop="headline">Why Choose Us</h2>
+        </div>
+
+        <div class="services-block">
+
+            <div class="services-block-box marg-left">
+                <i class="fa fa-tablet fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">Goal Tracking</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+            <div class="services-block-box">
+                <i class="fa fa-lemon-o fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">Reporting</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+            <div class="services-block-box">
+                <i class="fa fa-folder-o fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">Assessments</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+            <div class="services-block-box marg-top marg-left">
+                <i class="fa fa-code fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">Collaboration</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+            <div class="services-block-box marg-top">
+                <i class="fa fa-envelope-o fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">Scheduling</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+            <div class="services-block-box marg-top">
+                <i class="fa fa-bookmark-o fa-3x" aria-hidden="true" itemprop="icon"></i>
+                <h3 class="heading-custom-class" itemprop="headline">HIPAA Compliant</h3>
+                <p class="para-custom-class" itemprop="text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Praesent vitae eros eget tellus<br>
+                    tristique bibendum.</p>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+<!-- /main content ends here -->
+<!-- /segal service section main wrapper ends here -->
 
 
 </body>
