--- a/index.html
+++ b/index.html
@@ -549,7 +549,50 @@
 <!-- /main content ends here -->
 <!-- /segal service section main wrapper ends here -->
 
+<!-- agdu about section main wrapper start from here -->
+<section id="aboutd390a380620aac0e" class="agdu aboutd390a380620aac0e about" itemscope itemtype="http://schema.org/Organization" itemprop="text">
 
+    <div class="container marginTop">
+
+        <div class="row">
+            <!-- left side content starts here -->
+            <div class="col-md-6">
+
+                <div class="div-custom-class">
+                    <h4 class="mb-4" itemprop="headline">
+                        The best free stock photos, royalty free images & videos shared
+                        by creators
+                    </h4>
+                    <p class="mb-5" itemprop="text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptates.
+                    </p>
+                    <p class="text-gray" itemprop="text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste adipisci itaque, sit, iusto eaque animi ab mollitia nobis, consequatur dolores esse blanditiis molestiae natus eum modi cum at. Nihil non fugiat cum velit earum at, minus unde illum. Iusto libero beatae quis, doloremque et saepe unde dolorem ducimus numquam voluptatem.
+                    </p>
+                </div>
+
+            </div>
+             <!-- /left side content ends here -->
+
+              <!-- right side content starts here -->
+            <div class="col-md-6">
+
+                <div class="video_card">
+                    <img class="img-custom-class" src="http://rb.gy/de5wro" alt="image" itemprop="image"/>
+
+                    <button class="btn" itemprop="action">
+                        <i class="fa fa-play" itemprop="icon"></i>
+                    </button>
+                </div>
+                
+            </div>
+            <!-- /right side content ends here -->
+        </div>
+
+    </div>
+
+</section>
+<!-- /agdu about section main wrapper ends here -->
 
 
 </body>
