--- a/index.html
+++ b/index.html
@@ -594,6 +594,26 @@
 </section>
 <!-- /agdu about section main wrapper ends here -->
 
+<!-- balu banner section main wrapper start from here -->
+<section id="bannerb9ce7550acbf1ce9f" class="balu banner bannerb9ce7550acbf1ce9f" itemscope itemtype="http://schema.org/Organization" itemprop="text">
+    <!-- banner content starts here -->
+    <div class="background">
+        <div class="container text-white text-center">
+            <h2 class="font-weight-bold" itemprop="headline">
+                Contact Us
+            </h2>
+            <p itemprop="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, nam!
+            </p>
+            <button class="btn button font-weight-bold" itemprop="action">
+                Contact Us
+            </button>
+        </div>
+    </div>
+    <!-- /banner content ends here -->
+</section>
+<!-- /balu banner section main wrapper ends here -->
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" itemprop="script"></script>
@@ -610,8 +630,6 @@
  
 <script data-cfasync="false" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
  
-
-
 <!-- change url if its for download -->
 
  </body>
