--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 <!-- balu banner section main wrapper start from here -->
 <section id="bannerb9ce7550acbf1ce9f" class="balu banner bannerb9ce7550acbf1ce9f" itemscope itemtype="http://schema.org/Organization" itemprop="text">
     <!-- banner content starts here -->
-    <div class="background">
+    <div class="background mt-5">
         <div class="container text-white text-center">
             <h2 class="font-weight-bold" itemprop="headline">
                 Contact Us
